restic: update default excluded paths

--- a/roles/restic/defaults/main.yml
+++ b/roles/restic/defaults/main.yml
@@ -45,7 +45,6 @@ restic_agent_iexclude_basic:
   - "/home/**/venv/"
   - "/home/*/.kube/http-cache"
   - "/home/*/go/"
-  - "/home/*/.*-bin/"
   - "/home/*/vmware/"
   - "/home/*/Nextcloud/"
   - "/home/*/.android-sdk-linux/"
@@ -61,10 +60,7 @@ restic_agent_iexclude_basic:
   - "/home/*/.android/"
   - "/home/*/.gradle/"
   - "/home/*/.bundle/"
-  - "/home/*/.clion-*/"
-  - "/home/*/.PyCharm*/"
-  - "/home/*/.GoLand*/"
-  - "/home/*/.arduino-*/"
+  - "/home/*/.local/opt/"
   - "/home/*/.local/share/containers/"
   - "/home/*/.local/share/TelegramDesktop/"
   - "/var/tmp/*"
