server_hardening: fix cleanup and molly-guard

--- a/roles/server_hardening/defaults/main.yaml
+++ b/roles/server_hardening/defaults/main.yaml
@@ -36,8 +36,13 @@ fw_whitelists: []
 
 auditd_enabled: false
 auditd_rules: ""
+
+
 # rkhunter
 rkhunter_enabled: false
+
+
+fail2ban_enabled: true
 
 
 # Secure machine
