--- a/roles/restic/tasks/restic.yml
+++ b/roles/restic/tasks/restic.yml
@@ -19,7 +19,7 @@
     pkg:
       - restic
     state: present
-    default_release: "o=Netsplit,n=bullseye,c="
+    default_release: "o=Netsplit,n={{ ansible_distribution_release }},c="
   when: ansible_os_family == 'Debian' and not restic_stdin_experiment
 
 - name: Install restic package (experiment)
@@ -28,7 +28,7 @@
     pkg:
       - restic-stdin-from-command
     state: present
-    default_release: "o=Netsplit,n=bullseye,c="
+    default_release: "o=Netsplit,n={{ ansible_distribution_release }},c="
   when: ansible_os_family == 'Debian' and restic_stdin_experiment
 
 # Restic in dnf is too old
