--- a/roles/wireguard/tasks/linux-cfg.yml
+++ b/roles/wireguard/tasks/linux-cfg.yml
@@ -1,9 +1,10 @@
-- name: Add Debian backports repo for Buster
+- name: Add Netsplit repository
   become: true
-  apt_repository:
-    repo: deb http://deb.debian.org/debian buster-backports main
-    state: present
-  when: ansible_distribution_release == "buster"
+  copy:
+    dest: "/etc/apt/sources.list.d/netsplit.list"
+    content: |
+      deb [trusted=yes] https://deb.netsplit.it/{{ ansible_distribution_release }} ./
+      deb [trusted=yes] https://deb.netsplit.it/selfcontained ./
 
 - name: Install dependencies
   become: true
