--- a/roles/prometheus_exporters/tasks/smartctl.yml
+++ b/roles/prometheus_exporters/tasks/smartctl.yml
@@ -22,6 +22,7 @@
     - name: Add smartmontools and exporter
       become: true
       apt:
+        update_cache: true
         state: present
         name:
           - smartmontools
