--- a/roles/rtsp_simple_server/tasks/main.yaml
+++ b/roles/rtsp_simple_server/tasks/main.yaml
@@ -21,6 +21,7 @@
         pkg:
           - rtsp-simple-server
           - ffmpeg
+        update_cache: true
         state: present
 
     - name: Create rtsp-simple-server config
