--- a/roles/restic/tasks/rest-server.yml
+++ b/roles/restic/tasks/rest-server.yml
@@ -19,6 +19,7 @@
     pkg:
       - rest-server
     state: present
+    update_cache: true
   when: ansible_os_family == 'Debian'
 
 - name: Install binary from GitHub
