server_hardening: add ES, bugfix

--- a/roles/server_hardening/handlers/main.yaml
+++ b/roles/server_hardening/handlers/main.yaml
@@ -15,7 +15,7 @@
 - name: Reload iptables rules
   become: true
   systemd:
-    name: iptables
+    name: netfilter-persistent
     state: restarted
 
 - name: Reload nftables rules
